# codex-of-the-damned

./: .gitignore  .rsync-filter  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  MANIFEST  MANIFEST.in  Makefile  README.md  TODO.md  babel.cfg  base.css  decklist.js  index.html  navigation.py  pyproject.toml  run.py  setup.cfg  setup.py  update.sh
.claude/agents/: strategist.md  translator.md
.claude/references/strategist/: calibration.md  card-changes-history.md  meta-by-year.md  modules.md
.claude/skills/twda/: SKILL.md
.github/workflows/: deploy.yml  static.yaml  validation.yaml
archetypes/: aaa.html  akunanse-wall.html  amaravati-politics.html  anti-ventrue-grinder.html  baltimore-purge.html  bima-dominate.html  black-hand.html  cats.html  council-of-doom.html  cybelotron.html  daughters-politics.html  death-star.html  dmitris-big-band.html  emerald-legion.html  euro-brujah.html  girls-will-find-inner-circle.html  girls-will-find-inner-circles.html  goratrix-high-tower.html  guruhi-rush.html  hunters.html  index.html  ishtarri-politics.html  jost-powerbleed.html  khazars-diary.html  kiasyd-stealth-bleed.html  lasombra-nocturn.html  lutz-politics.html  madness-reversal.html  mind-rape.html  mistress.html  nananimalism.html  nephandii.html  nosferatu-royalty.html  rachel-madness.html  ravnos-clown-car.html  renegade-assault.html  saulot-and-friends.html  scout.html  shambling-hordes.html  spirit-marionette.html  (+14 more)
best-cards/: index.html
best-cards/clans/: ahrimanes.html  akunanse.html  assamite.html  baali.html  brujah.html  caitiff.html  daughters-of-cacophony.html  followers-of-set.html  gangrel.html  giovanni.html  guruhi.html  harbingers-of-skulls.html  imbued.html  ishtarri.html  kiasyd.html  lasombra.html  malkavian.html  nosferatu.html  ravnos.html  salubri.html  toreador.html  tremere.html  true-brujah.html  tzimisce.html  ventrue.html
best-cards/generic/: animalism.html  auspex.html  celerity.html  dominate.html  fortitude.html  master.html  necromancy.html  no-discipline.html  obfuscate.html  political-action.html  potence.html  presence.html
best-cards/sects/: anarch.html  camarilla.html  laibon.html  sabbat.html
card-search/: card.js  index.html
codex/: __init__.py  config.py
codex/static/js/: toggleRulingForm.js
codex/templates/: 404.html  card-search.html  index.html  layout.html
codex/templates/archetypes/: _layout-erratum.html  anti-ventrue-grinder.html  bima-dominate.html  girls-will-find-inner-circle.html  kiasyd-stealth-bleed.html  mind-rape.html  mistress.html  nosferatu-royalty.html  shambling-hordes.html  the-unnamed.html
codex/templates/best-cards/: index.html
codex/templates/strategy/: archetypes.html  bloat.html  combat.html  index.html  table-talk.html
codex_of_the_damned/: __init__.py  config.py  navigation.py
codex_of_the_damned/static/css/: base.css  new.css
codex_of_the_damned/static/js/: card-search.js  card.js  complete.js  dC.js  deck-search.js  decklist.js  display.js  statistics.js  twda.js  url-state.js
codex_of_the_damned/templates/: _layout_promo.html  _layout_sponsor.html  card-search.html  deck-search.html  index.html  layout.html  sitemap.xml
codex_of_the_damned/templates/archetypes/: _layout-erratum.html  _layout.html  aaa.html  aaa.json  akunanse-wall.html  amaravati-politics.html  amaravati-politics.json  anson-guns.html  anson-guns.json  anti-ventrue-grinder.html  anti-ventrue-grinder.json  baltimore-purge.html  baltimore-purge.json  bima-dominate.html  bima-dominate.json  black-hand.html  black-hand.json  cats.html  cats.json  council-of-doom.html  council-of-doom.json  cybelotron.html  daughters-politics.html  daughters-politics.json  death-star.html  death-star.json  dementation-bleed.html  dementation-bleed.json  dmitris-big-band.html  dmitris-big-band.json  emerald-legion.html  emerald-legion.json  euro-brujah.html  euro-brujah.json  gangrel-barons.html  gangrel-barons.json  gentlemen-with-sticks.html  gentlemen-with-sticks.json  girls-will-find-inner-circle.html  girls-will-find-inner-circle.json  (+82 more)
codex_of_the_damned/templates/best-cards/: _layout.html  _layout_card_column.html  index.html
codex_of_the_damned/translations/es/: messages.po
codex_of_the_damned/utils/: Instructions.md  convert.json  convert.txt
deck-guides/: den-of-fiends.html  index.html  libertine-ball.html  pact-with-nephandi.html  parliament-of-shadows.html
deck-search/: index.html  twda.js
deploy/: README.md  ansible.cfg  cleanup.yml  deploy.yml  requirements.yml
deploy/templates/: codex.service.j2
src/: __init__.py  babel.cfg  navigation.py
src/templates/: 404.html  card-search.html  deck-search.html  index.html  layout.html
strategy/: archetypes.html  bloat.html  combat.html  deck-building.html  fundamentals.html  index.html  statistics.js  table-talk.html
strategy/deck-guides/: den-of-fiends.html  libertine-ball.html  pact-with-nephandi.html  parliament-of-shadows.html
templates/: index.html
templates/archetypes/: _layout.html  cats.html  cybelotron.html  death-star.html  emerald-legion.html  index.html  ishtarri-politics.html  jost-powerbleed.html  nephandii.html  the-dark-side-of-politics.html  war-chantry.html  war-ghouls.html  weenie-aus.html  weenie-dom.html
templates/strategy/: deck-building.html  fundamentals.html
tests/: conftest.py  test_navigation.py  test_pages.py  test_templates.py
twda/: index.html  twda.js
twda-analysis/: README.md  index.html
twda-analysis/best-cards/: animalism.html  auspex.html  celerity.html  dominate.html  fortitude.html  master.html  no-discipline.html  obfuscate.html  political-action.html  potence.html  presence.html
twda-analysis/clans/: ahrimanes.html  akunanse.html  assamite.html  baali.html  brujah.html  daughters-of-cacophony.html  followers-of-set.html  gangrel.html  giovanni.html  guruhi.html  harbingers-of-skulls.html  imbued.html  ishtarri.html  kiasyd.html  lasombra.html  malkavian.html  nosferatu.html  ravnos.html  salubri.html  toreador.html  tremere.html  true-brujah.html  tzimisce.html  ventrue.html
utils/: README.md  decklist-converter.py
(+842 files in other folders)
