[metadata]
name = codex-of-the-damned
version = 1.56.dev0
author = lionelpx
author_email = lionel.panhaleux+codex@gmail.com
url = http://github.com/lionel-panhaleux/codex-of-the-damned
description="Website on VTES Strategy, cards rulings and TWD search interface.",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = vampire vtes ccg twd
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    babel
    setuptools
install_requires =
    flask
    flask-babel
    unidecode
    # Need to pin jinja to generate the PO files
    # because of this issue: https://github.com/pallets/jinja/issues/1626
    # TODO: test unpinning this and generate PO (`make po`)
    Jinja2<3.1  

[options.entry_points]
console_scripts =
    codex = codex_of_the_damned:main

[options.extras_require]
dev =
    black
    clipboard
    flake8
    ipython
    pytest
    requests
    zest.releaser[recommended]

[flake8]
max-line-length = 88
exclude = build, dist, .eggs
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[extract_messages]
keywords = lazy_gettext
charset = utf-8
add-comments = TRANSLATORS:
width = 120
mapping-file = babel.cfg
input-dirs = codex_of_the_damned
output-file = messages.pot

[update_catalog]
width = 120
input-file = messages.pot
output-dir = codex_of_the_damned/translations

[compile_catalog]
domain = messages
directory = codex_of_the_damned/translations

[zest.releaser]
create-wheel = yes
